# webdebugger

./: .bumpversion.cfg  .gitignore  .travis.yml  .travis.yml.deprecated  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  docker-publish.sh  docker-push.sh  pyproject.toml  wsgi.py
manifests/: deployment.yaml  ingress.yaml  service.yaml
tests/: test_webdebugger.py
webdebugger/: __init__.py  app.py  main.py
webdebugger/templates/: info.html
webdebugger/views/: info.tpl
