[tool.poetry]
name = "webdebugger"
version = "0.12.5"
description = "Display HTTP headers and other usable info"
authors = ["Aleksey Koloskov <vsyscoder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sentry-sdk = {extras = ["flask"], version = "^0.19.4"}
flask = "^2.3.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
coverage = "^5.1"
bump2version = "^1.0.0"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
